[tool.poetry]
name = "content-wizard"
version = "0.1.0"
description = ""
authors = ["cardosofede <federico.cardoso.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["job-queue"], version = "^20.7"}
python-dotenv = "^1.0.0"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
langserve = "^0.0.47"
sse-starlette = "^2.0.0"
langchain-exa = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
black = "^23.12.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"