[tool.poetry]
name = "content-wizard"
version = "0.1.0"
description = ""
authors = ["cardosofede <federico.cardoso.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
langchain = "^0.3"
sse-starlette = "^2.0.0"
jupyter = "^1.1.1"
langgraph = "^0.2.38"
pandas = "^2.2.3"
glom = "^23.5.0"
langchain-ollama = "^0.2.0"
geckoterminal-py = "0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"
black = "^24.2.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
